# SysEngage-POC-4

./: .replit  PMT_E2E.ledger.json  pnpm-lock.yaml  replit.md
sysengage/: __init__.py  _cci_export_subprocess.py  _cci_runner_subprocess.py  _rm_attr_worker.py  promote_dd_to_class_model.py  pyproject.toml  run_create_3b_allprojects.py  run_create_3b_snapshots.py  run_dd_ph3c_both_branch.py  run_dd_r4.py  run_dispatch.py  run_nqps_cci_r1_r5_branch_dedup.py  run_nqps_cci_r1_r5_dedup.py  run_nqps_rd_ph3d_allrows_branch.py  run_nqps_rd_ph3d_r1_branch.py  run_nqps_rd_ph3d_r2_branch.py  run_pmt_3e_r2_dd_reexport.py  run_pmt_attr_r2.py  run_pmt_cci_r1.py  run_pmt_cci_r1_branch_test.py  run_pmt_cci_r1_r5.py  run_pmt_cci_r1_r5_branch_dedup.py  run_pmt_cci_r1_r5_dedup.py  run_pmt_dd_ph3c.py  run_pmt_dd_ph3c_r1.py  run_pmt_dd_ph3c_r2_branch.py  run_pmt_dd_ph3c_r5_branch.py  run_pmt_det_check.py  run_pmt_e2e_r1_3x.py  run_pmt_e2e_r1_main.py  run_pmt_e2e_r2_3x.py  run_pmt_rd_ph3d_allrows_branch.py  run_pmt_rd_ph3d_r1_branch.py  run_pmt_rd_ph3d_r2_branch.py  run_pmt_rd_r5_rerun.py  run_pmt_rm_r2_3x.py  run_pmt_rm_r2_3x_reexport.py  run_pmt_task37.py  run_row1_cci_daemon.py  run_row1_cci_e2e.py
sysengage/alembic/: env.py
sysengage/api/: __init__.py  cci_construction.py  main.py  row_lens.py  source_capture.py
sysengage/core/: ai_client.py  audit_trail.py  class_model_coverage.py  class_model_projection.py  class_model_validity.py  db.py  ledger.py  object_refs_resolver.py  orchestrator.py  output_naming.py  semantic_type_registry.py  slots.py  structural_data_assertion.py
(+634 files in other folders)
